--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "eslint": "^8.27.0",
+    "eslint-config-next": "^13.0.2",
     "mongodb": "^4.11.0",
+    "netlify-cli": "^12.1.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.0",
+    "react-toastify": "^9.1.1",
     "sass": "^1.55.0"
   },
   "devDependencies": {
     "@types/node": "18.11.4",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
-    "eslint": "8.26.0",
-    "eslint-config-next": "12.3.1",
     "typescript": "4.8.4"
   }
 }
